# gajou-api

./: LICENSE  README.md  requirements.txt  setup.cfg
examples/: grpc_example.py  http_example.py
src/gajou_api/grpc/: __init__.py  base_interceptor.py  base_stub.py  grpc_error.py
src/gajou_api/http/: __init__.py  base_http.py  session.py
src/gajou_api/http/errors/: __init__.py  access_error.py  auth_error.py  bad_request_error.py  base_http_error.py  not_found_error.py  server_error.py  unprocessable_entity_error.py
