[metadata]
name = gajou_api
version = 0.1.4
author = Artyom Komarenko
author_email = artyom.komarenko@mail.ru
description = Base classes and helpers to make QA autotests for API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArtyomKomarenko/gajou-api
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    grpcio
    requests

[options.packages.find]
where = src
